--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>My current favourite song is kamariya </div>
+	<div>
+		<h3>My current favourite song is <a href="https://youtu.be/i0_m90T04uw">kamariya</a></h3>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
